# maintos

./: CNAME  README.md  index.html
.github/workflows/: deploy-gh-pages.yml  deploy.yml
assets/: index-DOBKWvCI.css  index-DYXOEmED.js  index-RKB7zv0Z.js
backend/: .env  .env.template  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
backend/metaploy/: maintos.metaploy.conf  postinstall.sh
backend/src/: auth.rs  env.rs  github.rs  main.rs  utils.rs
backend/src/routing/: handlers.rs  middleware.rs  mod.rs
frontend/: .env.development  .env.production  index.html  package.json  pnpm-lock.yaml
frontend/src/: App.tsx  main.tsx
frontend/src/components/Common/: Common.tsx
frontend/src/components/Common/styles/: common_styles.scss  form.scss
frontend/src/components/DeploymentsGrid/: DeploymentsGrid.tsx  deployments_grid.scss
frontend/src/components/ProjectInfo/: ProjectInfo.tsx  project_info.scss
frontend/src/pages/: MainPage.tsx  OAuthPage.tsx  ProjectPage.tsx
frontend/src/styles/: _variables.scss  index.scss
frontend/src/types/: backend.ts
frontend/src/utils/: auth.tsx  backend.ts
frontend/src/utils/Hooks/: useClickOutside.ts
