[package]
name = "maintos-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
bollard = { version = "0.19.3", default-features = false, features = ["pipe"] }
chrono = "0.4.42"
clap = { version = "4.5.49", features = ["derive", "env"] }
dotenvy = "0.15.7"
hmac = "0.12.1"
http = "1.3.1"
jwt = "0.16.0"
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
